--- a/Models/Models.vcxproj.filters
+++ b/Models/Models.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClInclude Include="AirCraft.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Constraints.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FareClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
